--- a/src/main/resources/com/example/demo/signUp.fxml
+++ b/src/main/resources/com/example/demo/signUp.fxml
@@ -16,7 +16,7 @@
             <Font name="Showcard Gothic" size="35.0" />
          </font>
          <VBox.margin>
-            <Insets left="150.0" right="150.0" />
+            <Insets left="150.0" right="150.0" top="20.0" />
          </VBox.margin>
       </Text>
       <VBox alignment="CENTER_LEFT" prefHeight="431.0" prefWidth="400.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
@@ -105,16 +105,50 @@
             </Text>
             <ChoiceBox fx:id="role" prefHeight="25.0" prefWidth="351.0">
                <VBox.margin>
-                  <Insets left="30.0" right="30.0" />
+                  <Insets left="30.0" right="30.0" top="10.0" />
                </VBox.margin>
             </ChoiceBox>
-            <Text fx:id="passwordConfirmationErrorMessage1" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0">
+            <Text fx:id="roleErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0">
                <VBox.margin>
                   <Insets left="30.0" />
                </VBox.margin></Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Location Coordinate" wrappingWidth="122.66665140787757">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="30.0" right="30.0" top="20.0" />
+               </VBox.margin>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Latitude (X) :" wrappingWidth="80.66667429606116">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" left="30.0" right="30.0" top="10.0" />
+               </VBox.margin>
+            </Text>
+            <Text fx:id="latitude" fill="#0b0b0b" strokeType="OUTSIDE" strokeWidth="0.0">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="120.0" top="-36.0" />
+               </VBox.margin>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Longitude (Y) :" wrappingWidth="88.66667429606116">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="200.0" top="-27.0" />
+               </VBox.margin>
+            </Text>
+            <Text fx:id="longitude" fill="#0b0b0b" strokeType="OUTSIDE" strokeWidth="0.0">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="300.0" top="-16.0" />
+               </VBox.margin>
+            </Text>
          </children>
          <VBox.margin>
-            <Insets top="30.0" />
+            <Insets top="20.0" />
          </VBox.margin>
       </VBox>
       <Button mnemonicParsing="false" onAction="#signUpButton" text="Sign up">
@@ -124,7 +158,7 @@
       </Button>
       <Text fx:id="login" fill="#433eac" onMouseClicked="#login" strokeType="OUTSIDE" strokeWidth="0.0" text="Login">
          <VBox.margin>
-            <Insets left="490.0" />
+            <Insets bottom="10.0" left="490.0" />
          </VBox.margin>
       </Text>
    </children>
