--- a/src/main/resources/com/example/demo/signUp.fxml
+++ b/src/main/resources/com/example/demo/signUp.fxml
@@ -19,19 +19,19 @@
             <Insets left="150.0" right="150.0" top="20.0" />
          </VBox.margin>
       </Text>
-      <VBox alignment="CENTER_LEFT" prefHeight="431.0" prefWidth="400.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+      <VBox alignment="CENTER_LEFT" prefHeight="505.0" prefWidth="438.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
                <font>
                   <Font name="Arial Rounded MT Bold" size="12.0" />
                </font>
                <VBox.margin>
-                  <Insets left="30.0" top="10.0" />
+                  <Insets left="30.0" top="20.0" />
                </VBox.margin>
             </Text>
-            <TextField fx:id="usernameSignUp" maxHeight="-Infinity" maxWidth="-Infinity" onInputMethodTextChanged="#usernameValidation" onKeyTyped="#usernameValidation" prefHeight="0.0" prefWidth="350.0" promptText="admin04" style="-fx-background-color: rgba(222,222,222,0); -fx-border-color: transparent transparent grey transparent;">
+            <TextField fx:id="usernameSignUp" maxHeight="-Infinity" maxWidth="-Infinity" onInputMethodTextChanged="#usernameValidation" onKeyTyped="#usernameValidation" prefHeight="28.0" prefWidth="377.0" promptText="admin04" style="-fx-background-color: rgba(222,222,222,0); -fx-border-color: transparent transparent grey transparent;">
                <VBox.margin>
-                  <Insets left="30.0" right="30.0" top="10.0" />
+                  <Insets left="30.0" top="10.0" />
                </VBox.margin>
                <opaqueInsets>
                   <Insets />
@@ -50,7 +50,7 @@
                   <Insets left="30.0" top="20.0" />
                </VBox.margin>
             </Text>
-            <TextField fx:id="emailSignUp" maxHeight="-Infinity" maxWidth="-Infinity" onInputMethodTextChanged="#emailValidation" onKeyTyped="#emailValidation" prefHeight="0.0" prefWidth="350.0" promptText="admin04@gmail.com" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: transparent transparent grey transparent;">
+            <TextField fx:id="emailSignUp" maxHeight="-Infinity" maxWidth="-Infinity" onInputMethodTextChanged="#emailValidation" onKeyTyped="#emailValidation" prefHeight="28.0" prefWidth="385.0" promptText="admin04@gmail.com" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: transparent transparent grey transparent;">
                <VBox.margin>
                   <Insets left="30.0" right="30.0" />
                </VBox.margin>
@@ -68,7 +68,7 @@
                   <Insets left="30.0" top="20.0" />
                </VBox.margin>
             </Text>
-            <PasswordField fx:id="passwordSignUp" maxWidth="-Infinity" onInputMethodTextChanged="#passwordValidation" onKeyTyped="#passwordValidation" prefHeight="0.0" prefWidth="350.0" style="-fx-background-color: rgba(0,0,0,0); -fx-border-color: transparent transparent grey transparent;">
+            <PasswordField fx:id="passwordSignUp" maxWidth="-Infinity" onInputMethodTextChanged="#passwordValidation" onKeyTyped="#passwordValidation" prefHeight="28.0" prefWidth="384.0" style="-fx-background-color: rgba(0,0,0,0); -fx-border-color: transparent transparent grey transparent;">
                <VBox.margin>
                   <Insets left="30.0" right="30.0" top="10.0" />
                </VBox.margin>
@@ -86,7 +86,7 @@
                   <Insets left="30.0" right="30.0" top="20.0" />
                </VBox.margin>
             </Text>
-            <PasswordField fx:id="passwordConfirmationSignUp" maxHeight="-Infinity" maxWidth="-Infinity" onInputMethodTextChanged="#passwordConfirmationValidation" onKeyTyped="#passwordConfirmationValidation" prefHeight="0.0" prefWidth="350.0" style="-fx-background-color: rgba(222,222,222,0); -fx-border-color: transparent transparent grey transparent;">
+            <PasswordField fx:id="passwordConfirmationSignUp" maxHeight="-Infinity" maxWidth="-Infinity" onInputMethodTextChanged="#passwordConfirmationValidation" onKeyTyped="#passwordConfirmationValidation" prefHeight="28.0" prefWidth="384.0" style="-fx-background-color: rgba(222,222,222,0); -fx-border-color: transparent transparent grey transparent;">
                <VBox.margin>
                   <Insets left="30.0" right="30.0" top="10.0" />
                </VBox.margin>
@@ -103,7 +103,7 @@
                   <Insets left="30.0" right="30.0" top="20.0" />
                </VBox.margin>
             </Text>
-            <ChoiceBox fx:id="role" prefHeight="25.0" prefWidth="351.0">
+            <ChoiceBox fx:id="role" prefHeight="25.0" prefWidth="382.0">
                <VBox.margin>
                   <Insets left="30.0" right="30.0" top="10.0" />
                </VBox.margin>
@@ -128,24 +128,24 @@
                   <Insets bottom="20.0" left="30.0" right="30.0" top="10.0" />
                </VBox.margin>
             </Text>
-            <Text fx:id="latitude" fill="#0b0b0b" strokeType="OUTSIDE" strokeWidth="0.0">
+            <TextField fx:id="latitude" editable="false">
                <VBox.margin>
-                  <Insets bottom="10.0" left="120.0" top="-36.0" />
+                  <Insets left="110.0" right="230.0" top="-38.0" />
                </VBox.margin>
-            </Text>
+            </TextField>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Longitude (Y) :" wrappingWidth="88.66667429606116">
                <font>
                   <Font name="Arial Rounded MT Bold" size="12.0" />
                </font>
                <VBox.margin>
-                  <Insets left="200.0" top="-27.0" />
+                  <Insets left="220.0" top="-20.0" />
                </VBox.margin>
             </Text>
-            <Text fx:id="longitude" fill="#0b0b0b" strokeType="OUTSIDE" strokeWidth="0.0">
+            <TextField fx:id="longitude" editable="false">
                <VBox.margin>
-                  <Insets bottom="10.0" left="300.0" top="-16.0" />
+                  <Insets bottom="20.0" left="310.0" right="30.0" top="-18.0" />
                </VBox.margin>
-            </Text>
+            </TextField>
          </children>
          <VBox.margin>
             <Insets top="20.0" />
@@ -158,7 +158,7 @@
       </Button>
       <Text fx:id="login" fill="#433eac" onMouseClicked="#login" strokeType="OUTSIDE" strokeWidth="0.0" text="Login">
          <VBox.margin>
-            <Insets bottom="10.0" left="490.0" />
+            <Insets bottom="20.0" left="490.0" top="-20.0" />
          </VBox.margin>
       </Text>
    </children>
