--- a/src/main/resources/com/example/demo/updatePassword.fxml
+++ b/src/main/resources/com/example/demo/updatePassword.fxml
@@ -1,14 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.demo.UpdatePassword"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.forgotPasswordController">
+   <children>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Update Password">
+         <font>
+            <Font name="Showcard Gothic" size="30.0" />
+         </font>
+         <VBox.margin>
+            <Insets top="40.0" />
+         </VBox.margin>
+      </Text>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="New Password :" wrappingWidth="191.74429577589035">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="15.0" />
+         </font>
+         <VBox.margin>
+            <Insets right="300.0" top="50.0" />
+         </VBox.margin>
+      </Text>
+      <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="494.0">
+         <VBox.margin>
+            <Insets top="10.0" />
+         </VBox.margin>
+      </TextField>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm Password :" wrappingWidth="159.36441105604172">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="15.0" />
+         </font>
+         <VBox.margin>
+            <Insets left="120.0" right="450.0" top="30.0" />
+         </VBox.margin>
+      </Text>
+      <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="494.0">
+         <VBox.margin>
+            <Insets top="10.0" />
+         </VBox.margin>
+      </TextField>
+      <Button mnemonicParsing="false" onAction="#confirmButton" prefHeight="25.0" prefWidth="68.0" text="Confirm">
+         <VBox.margin>
+            <Insets top="40.0" />
+         </VBox.margin>
+      </Button>
+   </children>
+</VBox>
