--- a/src/main/resources/com/example/demo/eventCreate.fxml
+++ b/src/main/resources/com/example/demo/eventCreate.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="1198.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.createEventController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="1198.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.createEventController">
    <children>
       <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: #B2935B;">
          <children>
@@ -96,79 +97,104 @@
             <Insets right="495.0" top="30.0" />
          </VBox.margin>
       </Text>
-      <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="527.0" promptText="Title">
+      <TextField fx:id="eventTitle" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="527.0" promptText="Title">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description">
+      <Text fx:id="eventTitleErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="522.0">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+      </Text>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description (&lt; 300 characters)">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
          <VBox.margin>
-            <Insets right="440.0" top="30.0" />
+            <Insets right="300.0" top="15.0" />
          </VBox.margin>
       </Text>
-      <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="523.0" promptText="Description">
+      <TextField fx:id="eventDescription" maxHeight="-Infinity" maxWidth="-Infinity" onKeyTyped="#eventDescriptionValidation" prefHeight="31.0" prefWidth="523.0" promptText="Description">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
+      <Text fx:id="eventDescriptionErrorMessage" fill="#c51b1b" layoutX="354.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="520.0">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+      </Text>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Venue">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
          <VBox.margin>
-            <Insets right="475.0" top="30.0" />
+            <Insets right="475.0" top="15.0" />
          </VBox.margin>
       </Text>
-      <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="523.0" promptText="Venue">
+      <TextField fx:id="eventVenue" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="523.0" promptText="Venue">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
+      <Text fx:id="eventVenueErrorMessage" fill="#c51b1b" layoutX="352.0" layoutY="322.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="515.0">
+         <VBox.margin>
+            <Insets right="5.0" />
+         </VBox.margin>
+      </Text>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
          <VBox.margin>
-            <Insets right="488.0" top="30.0" />
+            <Insets right="488.0" top="15.0" />
          </VBox.margin>
       </Text>
-      <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="523.0" promptText="DD/MM/YYYY" >
-          <VBox.margin>
+      <DatePicker fx:id="eventDate" editable="false" onKeyTyped="#eventDateValidation" prefHeight="31.0" prefWidth="521.0" promptText="DD/MM/YYYY">
+         <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
-      </TextField>
+      </DatePicker>
+      <Text fx:id="eventDateErrorMessage" fill="#c51b1b" layoutX="352.0" layoutY="416.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="520.0">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+      </Text>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Time Start">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
          <VBox.margin>
-            <Insets right="450.0" top="30.0" />
+            <Insets right="450.0" top="15.0" />
          </VBox.margin>
       </Text>
-      <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="523.0" promptText="11:30 am" >
+      <TextField fx:id="eventStartTime" maxHeight="-Infinity" maxWidth="-Infinity" onKeyTyped="#eventStartTimeValidation" prefHeight="31.0" prefWidth="523.0" promptText="11:30 am">
           <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
+      <Text fx:id="eventStartTimeErrorMessage" fill="#c51b1b" layoutX="352.0" layoutY="510.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="520.0">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+      </Text>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Time End">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
          <VBox.margin>
-            <Insets right="455.0" top="30.0" />
+            <Insets right="455.0" top="15.0" />
          </VBox.margin>
       </Text>
-      <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="523.0" promptText="1:30 pm" >
+      <TextField fx:id="eventEndTime" maxHeight="-Infinity" maxWidth="-Infinity" onKeyTyped="#eventEndTimeValidation" prefHeight="31.0" prefWidth="523.0" promptText="1:30 pm">
           <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
-      <Text fx:id="timeErrorMessage" fill="red" strokeType="OUTSIDE" strokeWidth="0.0" text="">
+      <Text fx:id="eventEndTimeErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" text="" wrappingWidth="523.0">
         <VBox.margin>
-            <Insets top="5.0" />
+            <Insets />
         </VBox.margin>
       </Text>
       <Button mnemonicParsing="false" onAction="#createEvent" text="Create">
