--- a/src/main/resources/com/example/demo/forgotPassword.fxml
+++ b/src/main/resources/com/example/demo/forgotPassword.fxml
@@ -25,22 +25,22 @@
             <Insets right="300.0" top="50.0" />
          </VBox.margin>
       </Text>
-      <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="494.0">
+      <TextField fx:id="forgetUsermailField" maxWidth="-Infinity" prefHeight="25.0" prefWidth="494.0">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
-      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" text="Send OTP">
+      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="131.0" text="Temporary Password">
          <VBox.margin>
-            <Insets left="400.0" top="10.0" />
+            <Insets left="400.0" right="50.0" top="10.0" />
          </VBox.margin>
       </Button>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="OTP :">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Temporary Password :">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
          <VBox.margin>
-            <Insets right="450.0" top="20.0" />
+            <Insets left="120.0" right="450.0" top="20.0" />
          </VBox.margin>
       </Text>
       <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="494.0">
