--- a/src/main/resources/com/example/demo/updatePassword.fxml
+++ b/src/main/resources/com/example/demo/updatePassword.fxml
@@ -25,25 +25,27 @@
             <Insets right="300.0" top="50.0" />
          </VBox.margin>
       </Text>
-      <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="494.0">
+      <TextField fx:id="newPass" maxWidth="-Infinity" onAction="#confirmUpdatePassword" onKeyTyped="#confirmUpdatePassword" prefHeight="25.0" prefWidth="494.0">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
+      <Text fx:id="passwordErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="492.53666973114014" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm Password :" wrappingWidth="159.36441105604172">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
          <VBox.margin>
-            <Insets left="120.0" right="450.0" top="30.0" />
+            <Insets left="120.0" right="450.0" top="50.0" />
          </VBox.margin>
       </Text>
-      <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="494.0">
+      <TextField fx:id="newConPass" maxWidth="-Infinity" onAction="#confirmUpdatePassword" onKeyTyped="#confirmUpdatePassword" prefHeight="25.0" prefWidth="494.0">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
-      <Button mnemonicParsing="false" onAction="#confirmButton" prefHeight="25.0" prefWidth="68.0" text="Confirm">
+      <Text fx:id="confirmPasswordErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="492.53666973114014" />
+      <Button mnemonicParsing="false" onAction="#updatePasswordButton" prefHeight="25.0" prefWidth="68.0" text="Confirm">
          <VBox.margin>
             <Insets top="40.0" />
          </VBox.margin>
