--- a/src/main/resources/com/example/demo/signUp.fxml
+++ b/src/main/resources/com/example/demo/signUp.fxml
@@ -108,7 +108,7 @@
                   <Insets left="30.0" right="30.0" top="10.0" />
                </VBox.margin>
             </ChoiceBox>
-            <Text fx:id="roleErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0">
+            <Text fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0">
                <VBox.margin>
                   <Insets left="30.0" />
                </VBox.margin></Text>
