UPDATE FORGOT PASSWORD

--- a/src/main/resources/com/example/demo/forgotPassword.fxml
+++ b/src/main/resources/com/example/demo/forgotPassword.fxml
@@ -30,7 +30,7 @@
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
-      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="131.0" text="Temporary Password">
+      <Button mnemonicParsing="false" onAction="#sendEmail" prefHeight="25.0" prefWidth="131.0" text="Temporary Password">
          <VBox.margin>
             <Insets left="400.0" right="50.0" top="10.0" />
          </VBox.margin>
@@ -43,7 +43,7 @@
             <Insets left="120.0" right="450.0" top="20.0" />
          </VBox.margin>
       </Text>
-      <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="494.0">
+      <TextField fx:id="tempPass" maxWidth="-Infinity" prefHeight="25.0" prefWidth="494.0">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
