--- a/src/main/resources/com/example/demo/updatePassword.fxml
+++ b/src/main/resources/com/example/demo/updatePassword.fxml
@@ -17,6 +17,11 @@
             <Insets top="40.0" />
          </VBox.margin>
       </Text>
+      <TextField fx:id="user" style="-fx-background-color: transparent;" visible="false">
+         <VBox.margin>
+            <Insets top="-20.0" />
+         </VBox.margin>
+      </TextField>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="New Password :" wrappingWidth="191.74429577589035">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
@@ -25,12 +30,12 @@
             <Insets right="300.0" top="50.0" />
          </VBox.margin>
       </Text>
-      <TextField fx:id="newPass" maxWidth="-Infinity" onAction="#confirmUpdatePassword" onKeyTyped="#confirmUpdatePassword" prefHeight="25.0" prefWidth="494.0">
+      <TextField fx:id="newPass" maxWidth="-Infinity" onInputMethodTextChanged="#confirmUpdatePassword" onKeyTyped="#confirmUpdatePassword" prefHeight="25.0" prefWidth="494.0">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
-      <Text fx:id="passwordErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="492.53666973114014" />
+      <Text fx:id="passwordErrorMessage" fill="#c51b1b" onInputMethodTextChanged="#confirmUpdatePassword" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="492.53666973114014" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm Password :" wrappingWidth="159.36441105604172">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
@@ -39,7 +44,7 @@
             <Insets left="120.0" right="450.0" top="50.0" />
          </VBox.margin>
       </Text>
-      <TextField fx:id="newConPass" maxWidth="-Infinity" onAction="#confirmUpdatePassword" onKeyTyped="#confirmUpdatePassword" prefHeight="25.0" prefWidth="494.0">
+      <TextField fx:id="newConPass" maxWidth="-Infinity" onInputMethodTextChanged="#confirmUpdatePassword" onKeyTyped="#confirmUpdatePassword" prefHeight="25.0" prefWidth="494.0">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
