--- a/src/main/resources/com/example/demo/login.fxml
+++ b/src/main/resources/com/example/demo/login.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="704.0" prefWidth="1222.0" style="-fx-background-color: #FFE5B6;" stylesheets="@../../../CssStyle/login.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.loginController">
+<VBox alignment="CENTER" prefHeight="704.0" prefWidth="1222.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.loginController">
    <children>
       <Button mnemonicParsing="false" onAction="#closeButton" text="x">
          <VBox.margin>
