--- a/src/main/resources/com/example/demo/updatePassword.fxml
+++ b/src/main/resources/com/example/demo/updatePassword.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -30,11 +31,11 @@
             <Insets right="300.0" top="50.0" />
          </VBox.margin>
       </Text>
-      <TextField fx:id="newPass" maxWidth="-Infinity" onInputMethodTextChanged="#confirmUpdatePassword" onKeyTyped="#confirmUpdatePassword" prefHeight="25.0" prefWidth="494.0">
+      <PasswordField fx:id="newPass" maxWidth="-Infinity" onKeyTyped="#updatePassword" prefHeight="25.0" prefWidth="495.0">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
-      </TextField>
+      </PasswordField>
       <Text fx:id="passwordErrorMessage" fill="#c51b1b" onInputMethodTextChanged="#confirmUpdatePassword" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="492.53666973114014" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm Password :" wrappingWidth="159.36441105604172">
          <font>
@@ -44,11 +45,11 @@
             <Insets left="120.0" right="450.0" top="50.0" />
          </VBox.margin>
       </Text>
-      <TextField fx:id="newConPass" maxWidth="-Infinity" onInputMethodTextChanged="#confirmUpdatePassword" onKeyTyped="#confirmUpdatePassword" prefHeight="25.0" prefWidth="494.0">
+      <PasswordField fx:id="newConPass" maxWidth="-Infinity" onKeyTyped="#updatePassword" prefHeight="25.0" prefWidth="495.0">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
-      </TextField>
+      </PasswordField>
       <Text fx:id="confirmPasswordErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="492.53666973114014" />
       <Button mnemonicParsing="false" onAction="#updatePasswordButton" prefHeight="25.0" prefWidth="68.0" text="Confirm">
          <VBox.margin>
