--- a/src/main/resources/com/example/demo/friendList.fxml
+++ b/src/main/resources/com/example/demo/friendList.fxml
@@ -110,7 +110,7 @@
                   <Font name="Showcard Gothic" size="35.0" />
                </font>
                <VBox.margin>
-                  <Insets top="40.0" />
+                  <Insets left="200.0" top="40.0" />
                </VBox.margin>
             </Text>
             <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="66.0" prefWidth="765.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
@@ -143,26 +143,26 @@
       <VBox prefHeight="453.0" prefWidth="335.0" BorderPane.alignment="CENTER">
          <children>
             <SplitPane dividerPositions="0.34415584415584416, 0.7240259740259739" maxWidth="-Infinity" orientation="VERTICAL" prefHeight="152.0" prefWidth="220.0">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" top="200.0" />
-               </VBox.margin>
                <items>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFCC;">
                      <children>
-                        <Button layoutX="-1.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="220.0" text="Profile" AnchorPane.topAnchor="-2.0" />
+                        <Button layoutX="-3.0" layoutY="-0.6666666666666666" mnemonicParsing="false" onAction="#personalProfileStartUp" prefHeight="47.0" prefWidth="222.0" style="-fx-background-color: #FFFFCC;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Profile" AnchorPane.topAnchor="-1.0" />
                      </children>
                   </AnchorPane>
-                  <AnchorPane prefHeight="47.0" prefWidth="207.0">
+                  <AnchorPane prefHeight="47.0" prefWidth="207.0" style="-fx-background-color: #FFFFCC;">
                      <children>
-                        <Button layoutY="-3.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="219.0" text="Request" />
+                        <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="219.0" style="-fx-background-color: #FFFFCC;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Request" />
                      </children>
                   </AnchorPane>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFCC;">
                      <children>
-                        <Button layoutX="-2.0" layoutY="-3.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="221.0" text="Friend" />
+                        <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="219.0" style="-fx-background-color: #DBDBB3;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Friend" />
                      </children>
                   </AnchorPane>
                </items>
+               <VBox.margin>
+                  <Insets left="20.0" right="20.0" top="200.0" />
+               </VBox.margin>
             </SplitPane>
          </children>
       </VBox>
